[metadata]
author = Authon Name
author_email = Author email
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
description = Module description
license = Proprietary and confidential.
name = module_name
url = https://github.com/rtkn07/py_tmp
version = 0.0.1

[options]
install_requires =
    # list the modules required for installation
packages = find:

[options.package_data]
# list sub_directories required to be installed as a part of a module
module_name = 
    static/*
    sub_module/*
